// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar infinite - renders correctly 1`] = `
.c2 {
  background-color: var(--px-progress-bar-fill-color,black);
  height: var(--px-progress-bar-height,5px);
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.78,0.13,0.16,0.87);
  -webkit-transition: transform 1s cubic-bezier(0.78,0.13,0.16,0.87);
  transition: transform 1s cubic-bezier(0.78,0.13,0.16,0.87);
  -webkit-transform-origin: left center;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scaleX(0);
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  overflow: hidden;
  -webkit-transform: scaleX(0.5);
  -ms-transform: scaleX(0.5);
  transform: scaleX(0.5);
  position: relative;
  -webkit-animation: cJGqkr 2s cubic-bezier(0.78,0.13,0.16,0.87) infinite;
  animation: cJGqkr 2s cubic-bezier(0.78,0.13,0.16,0.87) infinite;
}

.c1 {
  background-color: var(--px-progress-bar-background-color,lightgray);
  height: var(--px-progress-bar-height,5px);
}

.c0 {
  height: var(--px-progress-bar-height,5px);
}

<div
  aria-valuemax={100}
  aria-valuemin={0}
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        value={50}
      />
    </div>
  </div>
</div>
`;

exports[`ProgressBar renders correctly 1`] = `
.c2 {
  background-color: var(--px-progress-bar-fill-color,black);
  height: var(--px-progress-bar-height,5px);
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.78,0.13,0.16,0.87);
  -webkit-transition: transform 1s cubic-bezier(0.78,0.13,0.16,0.87);
  transition: transform 1s cubic-bezier(0.78,0.13,0.16,0.87);
  -webkit-transform-origin: left center;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scaleX(0);
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  overflow: hidden;
  -webkit-transform: scaleX(0.5);
  -ms-transform: scaleX(0.5);
  transform: scaleX(0.5);
}

.c1 {
  background-color: var(--px-progress-bar-background-color,lightgray);
  height: var(--px-progress-bar-height,5px);
}

.c0 {
  height: var(--px-progress-bar-height,5px);
}

<div
  aria-valuemax={100}
  aria-valuemin={0}
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        value={50}
      />
    </div>
  </div>
</div>
`;
